# dromozoa-ubench

./: .gitignore  Makefile.am  README.md  configure.ac  cpu.cpp  dromozoa-ubench  dromozoa-ubench-1.0-1.rockspec  dromozoa-ubench-1.1-1.rockspec  dromozoa-ubench-1.2-1.rockspec  dromozoa-ubench-1.5-1.rockspec  dromozoa-ubench-check  dromozoa-ubench-generate  dromozoa-ubench-merge  dromozoa-ubench-report  dromozoa-ubench-run  gen.lua  generate.lua  merge.lua  module.cpp  opcode.lua  opcode_x.lua  report.lua  sample.lua  sample2.lua  sched.cpp  sys_sysinfo.cpp  tarai.cpp  tarai.sh  test.lua  test.sh  test2.lua  test3.lua  test4.lua  test5.lua  test6.lua  test_timeval.lua  timer.cpp  ubench.lua  ubench.sh  ubench1.lua  (+6 more)
doc/: note.md  report.xlsx  rpi3.md
docs/: index.html  report.xlsx  report2.xlsx
dromozoa/: ubench.c  ubench.lua
dromozoa/ubench/: average.lua  context.lua  core.lua  dump.lua  estimate.lua  estimate_n.lua  gettimeofday.c  impl.c  linest.lua  max.lua  min.lua  nanosleep.c  report.lua  run.lua  run1.lua  run2.lua  run_n.lua  stdev.lua  tail.lua  tarai.lua  timeval.lua
m4/: update
test/: test.lua  test_context.lua  test_run.lua  ubench_tarai.lua
ubench/: reader.lua
